# SuperVIO

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
cfg/: super_vio_car_config.yaml  super_vio_euroc_config.yaml  super_vio_kitti.yaml  super_vio_tum_512_config.yaml
include/dense_mapping/: delaunay.h  densifier.h  depth_interpolator.h  fast_bilateral_solver.h  mesh_regularizer.h
include/dense_mapping/internal/: draw_function.h
include/estimation/: estimation_core.h  parameters.h  state_estimator.h  vio_states_measurements.h  visual_imu_alignment.h
include/imu/: imu_checker.h  imu_integrator.h  imu_noise.h  imu_pre_integrator.h  imu_processor.h  imu_states_measurements.h
include/loop_closure/: image_retrieval.h  loop_closure_estimator.h
include/loop_closure/internal/: io.h
include/nodelet/: super_vio_nodelet.h
include/optimization/: helper.h  marginalizer.h  optimizer.h
include/optimization/factors/: cost_function_factory.h  imu_factor.h  inverse_depth_factor.h  marginalization_factor.h  relative_pose_factor.h
include/optimization/parameter_blocks/: base_parameter_block.h  inverse_depth_parameter_block.h  parameter_block_factory.h  pose_local_parameterization.h  pose_parameter_block.h  speed_bias_parameter_block.h
include/optimization/residual_blocks/: base_residual_block.h  marginalization_residual_block.h  pre_integration_residual_block.h  relative_pose_residual_block.h  reprojection_residual_block.h  residual_block_factory.h
include/sfm/: absolute_pose.h  initial_sfm.h  match.h  relative_pose.h
include/utility/: cv_base.h  eigen_base.h  eigen_type.h  matrix_operation.h
include/vision/: camera.h  feature_extractor.h  feature_matcher.h  feature_tracker.h  triangulator.h  vision_measurements.h
include/visualization/: visualizer.h
launch/: super_vio_kitti_nodelet.launch  super_vio_node.launch  super_vio_node_car.launch  super_vio_node_tum_512.launch  super_vio_node_tum_512_gdb.launch  super_vio_nodelet.launch  super_vio_nodelet_car.launch
src/: ar_depth_node.cpp  dense_mapping_node.cpp  ros_node.cpp
src/dense_mapping/: delaunay.cpp  densifier.cpp  depth_interpolator.cpp  fast_bilateral_solver.cpp  mesh_regularizer.cpp  triangle.cpp
src/dense_mapping/internal/: draw_function.cpp
src/estimation/: estimation_core.cpp  parameters.cpp  state_estimator.cpp  vio_states_measurements.cpp  visual_imu_alignment.cpp
src/imu/: imu_checker.cpp  imu_integrator.cpp  imu_noise.cpp  imu_pre_integrator.cpp  imu_processor.cpp  imu_states_measurements.cpp
src/loop_closure/: image_retrieval.cpp  loop_closure_estimator.cpp
src/nodelets/: super_vio_nodelet.cpp
src/optimization/: helper.cpp  marginalizer.cpp  optimizer.cpp
src/optimization/factors/: cost_function_factory.cpp  imu_factor.cpp  inverse_depth_factor.cpp  marginalization_factor.cpp  relative_pose_factor.cpp
src/optimization/parameter_blocks/: base_parameter_block.cpp  inverse_depth_parameter_block.cpp  parameter_block_factory.cpp  pose_local_parameterization.cpp  pose_parameter_block.cpp  speed_bias_parameter_block.cpp
src/optimization/residual_blocks/: base_residual_block.cpp  marginalization_residual_block.cpp  pre_integration_residual_block.cpp  relative_pose_residual_block.cpp  reprojection_residual_block.cpp  residual_block_factory.cpp
src/sfm/: absolute_pose.cpp  initial_sfm.cpp  match.cpp  relative_pose.cpp
src/utility/: matrix_operation.cpp
src/vision/: camera.cpp  feature_extractor.cpp  feature_matcher.cpp  feature_tracker.cpp  triangulator.cpp  vision_measurements.cpp
src/visualization/: visuailizer.cpp
tests/: CMakeLists.txt  test_training.cpp  test_voc.cpp
tests/estimation/: test_aligner.cpp
tests/imu/: test_imu.cpp  test_marginalizer.cpp
tests/optimization/: test_optimizer.cpp
tests/vision/: test_feature_matcher.cpp  test_feature_tracker.cpp  test_triangulation.cpp
tests/visualization/: test_visualizer.cpp
