<?xml version="1.0"?>
<package format="2">
  <name>supervio</name>
  <version>0.0.0</version>
  <description>
      Driver package for multiple csi omni cams based on gscam and kalibr calibration.
  </description>
  <maintainer email="chenghegao4556@gmail.com">Zachary Taylor</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf_conversions</depend>
  <depend>nodelet</depend>
  <depend>camera_info_manager</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
  
</package>
